--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appnope==0.1.0
 bleach==2.0.0
+cycler==0.10.0
 decorator==4.0.11
 entrypoints==0.2.3
 html5lib==0.999999999
@@ -15,6 +16,7 @@ jupyter-client==5.0.1
 jupyter-console==5.1.0
 jupyter-core==4.3.0
 MarkupSafe==1.0
+matplotlib==2.0.2
 mistune==0.7.4
 nbconvert==5.2.1
 nbformat==4.3.0
@@ -27,7 +29,9 @@ prompt-toolkit==1.0.14
 protobuf==3.3.0
 ptyprocess==0.5.1
 Pygments==2.2.0
+pyparsing==2.2.0
 python-dateutil==2.6.0
+pytz==2017.2
 pyzmq==16.0.2
 qtconsole==4.3.0
 simplegeneric==0.8.1
